Bug 67927 - R600_DEBUG=sb: Celestia show 2 earths, one wrongly rendered
Summary: R600_DEBUG=sb: Celestia show 2 earths, one wrongly rendered
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/r600 (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium major
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-08 23:48 UTC by Dieter Nützel
Modified: 2013-08-13 22:52 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
r600-sb-Celestia-2-earths.png (389.67 KB, image/png)
2013-08-08 23:48 UTC, Dieter Nützel
Details
celestia started with R600_DEBUG=sb,ps,vs (32.56 KB, application/octet-stream)
2013-08-09 20:58 UTC, Dieter Nützel
Details
[PATCH] r600g/sb: use MULADD workaround on 7xx for MULADD_IEEE (993 bytes, patch)
2013-08-09 22:39 UTC, Vadim Girlin
Details | Splinter Review

Description Dieter Nützel 2013-08-08 23:48:07 UTC
Created attachment 83869 [details]
r600-sb-Celestia-2-earths.png

Start Celestia, wait for earth.
Try 'Demo' (d) - or move, scale (zoom) around - nice effects.

-Dieter
Comment 1 Vadim Girlin 2013-08-09 12:12:58 UTC
So far I can't reproduce this issue. Please test with the latest mesa from git if you are using older version. If llvm backend is active in your configuration, you might want to update llvm as well or test the application with R600_DEBUG=sb,nollvm.

Also please attach the output with R600_DEBUG=sb,ps,vs
Comment 2 Dieter Nützel 2013-08-09 20:58:23 UTC
Created attachment 83906 [details]
celestia started with R600_DEBUG=sb,ps,vs
Comment 3 Dieter Nützel 2013-08-09 21:02:06 UTC
(In reply to comment #1)
> So far I can't reproduce this issue. Please test with the latest mesa from
> git if you are using older version.

I normally use git only...
...fixed an error in git last night ;-)

> If llvm backend is active in your
> configuration, you might want to update llvm as well

/home/dieter> llvm-config --version
3.3svn
openSUSE 12.3 distro version

I wouldn't use git LLVM on my working machinery if it is doable.

> or test the application
> with R600_DEBUG=sb,nollvm.

Good point!
Without LLVM it works, OK.
 
> Also please attach the output with R600_DEBUG=sb,ps,vs

See Comment 2.

Thanks,
  Dieter
Comment 4 Vadim Girlin 2013-08-09 22:39:34 UTC
Created attachment 83907 [details] [review]
[PATCH] r600g/sb: use MULADD workaround on 7xx for MULADD_IEEE

Does this patch help?
Comment 5 Dieter Nützel 2013-08-10 21:10:13 UTC
Excellent Vadim!

It fix it and apparently ./objview GreatLakesBiplaneHP.obj, too.
Should we close it, now?

Thank you very much.

-Dieter
Comment 6 Dieter Nützel 2013-08-13 20:53:47 UTC
The patch fix Mesa-demos 'objview GreatLakesBiplaneHP.obj' for sure, too.

Please commit!

-Dieter
Comment 7 Vadim Girlin 2013-08-13 22:52:25 UTC
Patch pushed with commit 17bb96b03d340c0aee8e1a332fdcd695e9179486


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.